feat[BE]: add POST /api/user_assignment_sessions and PATCH /api/user_assignment_sessions/:id
