# backend/docs/api/v1/swagger.json
@@ -71,6 +71,107 @@
         }
       }
     },
+    "/api/user_assignment_sessions": {
+      "post": {
+        "summary": "create user_assignment_session",
+        "tags": [
+          "UserAssignmentSessions"
+        ],
+        "parameters": [],
+        "responses": {
+          "201": {
+            "description": "created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean"
+                    },
+                    "user_assignment_session_id": {
+                      "type": "integer"
+                    }
+                  },
+                  "required": [
+                    "success",
+                    "user_assignment_session_id"
+                  ]
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "not found"
+          },
+          "422": {
+            "description": "unprocessable entity"
+          }
+        },
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "userAssignmentId": {
+                    "type": "integer"
+                  }
+                },
+                "required": [
+                  "userAssignmentId"
+                ]
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/user_assignment_sessions/{id}": {
+      "patch": {
+        "summary": "update user_assignment_session",
+        "tags": [
+          "UserAssignmentSessions"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "UserAssignmentSession ID",
+            "required": true,
+            "schema": {
+              "type": "integer"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean"
+                    }
+                  },
+                  "required": [
+                    "success"
+                  ]
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "not found"
+          },
+          "422": {
+            "description": "unprocessable entity"
+          }
+        }
+      }
+    },
     "/api/user_assignments": {
       "get": {
         "summary": "list user_assignments",
